# WeatherPI-Server

./: README.md  pyproject.toml
weatherapi/: main.py
weatherapi/models/: sensor_models.py
weatherapi/routers/: sensor_routes.py
