[tool.poetry]
name = "weatherpi-server"
version = "0.1.0"
description = "WeatherPi-Server is the backend component of a weather data collection and visualization system."
authors = ["Valter Wagner Zethrin <valter.wz98@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
